<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient1"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/optional_textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="casual"
        android:text="Mentorship"
        android:textColor="@android:color/white"
        android:textSize="21sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"

            android:elevation="5dp"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:id="@+id/loadingLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="One moment please..."
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/inputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:orientation="vertical"

                android:paddingTop="15dp"
                android:paddingBottom="15dp">


                <LinearLayout
                    style="@style/sign_up_textinput"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight=".7"
                        android:text="Sign up for mentorship"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                    <Switch
                        android:id="@+id/switch_mentorship"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:checked="true" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/mentorshipInfoLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/textinputlayout_purpose"
                        style="@style/sign_up_textinput"
                        android:layout_marginTop="20dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="3dp"
                            android:layout_weight=".28"
                            android:background="@drawable/spinner_back"
                            android:orientation="horizontal">

                            <Spinner
                                android:id="@+id/spinner_purpose"
                                style="@style/sign_up_edittextView"
                                android:layout_centerVertical="true"
                                android:layout_marginLeft="8dp"
                                android:layout_marginTop="15dp"
                                android:layout_marginRight="8dp"
                                android:entries="@array/purpose"
                                android:gravity="center"
                                android:spinnerMode="dialog" />


                        </RelativeLayout>
                    </android.support.design.widget.TextInputLayout>

                    <LinearLayout
                        style="@style/sign_up_textinput"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_weight=".7"
                            android:text="Highlight cross-disciplinary interests"
                            android:textColor="@color/black"
                            android:textSize="17sp" />

                        <Switch
                            android:id="@+id/switch_cross"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:checked="true" />
                    </LinearLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/textinputlayout_area"
                        style="@style/sign_up_textinput"

                        android:paddingBottom="15dp">

                        <TextView
                            style="@style/sign_up_textView"
                            android:text="Area of Study/Expertise"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/checkbox_life"
                                style="@style/mentorship_checkbox"
                                android:text="@string/ment_checkitem1" />

                            <RadioButton
                                android:id="@+id/checkbox_chem"
                                style="@style/mentorship_checkbox"
                                android:text="@string/ment_checkitem2" />

                            <RadioButton
                                android:id="@+id/checkbox_phy"
                                style="@style/mentorship_checkbox"
                                android:text="@string/ment_checkitem3" />

                            <RadioButton
                                android:id="@+id/checkbox_math"
                                style="@style/mentorship_checkbox"
                                android:text="@string/ment_checkitem4" />

                            <RadioButton
                                android:id="@+id/checkbox_comp"
                                style="@style/mentorship_checkbox"
                                android:text="@string/ment_checkitem5" />
                        </RadioGroup>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/button_save"
                    style="@style/sign_up_button"

                    android:background="@color/kuet_color_dark"
                    android:text="Save and Finish"
                    android:textColor="@color/common_button_text_color"
                    android:textStyle="bold" />


            </LinearLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>

</LinearLayout>
